2009-05-17 Francesco Piccinno <stack.box@gmail.com>
    * PM/Gui/Dialogs/Preferences.py
      PM/Gui/Core/App.py
      PM/Gui/Manager/PreferenceManager.py:
        - Added a check for python version (that should be >= 2.6)
        - Making checks for root/correct python version optional by
          adding it in pm-prefs.xml file, and in SectionPage of
          Preference dialog.
    * PM/Gui/Core/MainWindow.py
      PM/Gui/Core/GdlPaned.py:
        - Added a gdl paned implementation. You need gnome-python-extra
          package to use that implementation.
    * TODO: Cleaned up
    * PM/Gui/pages/PacketPage.py
      PM/Gui/Widgets/PyGtkHexView.py:
        - Added a new implementation of read/write hex view.
    * PM/Backend/Scapy/packet.py:
        - Added new method get_protocol_bounds() to MetaPacket class.
    * PM/Backend/Scapy/wrapper.py:
        - Added new function get_proto_size() used by MetaPacket.
    * PM/Gui/Tabs/PropertyTab.py:
        - Now if the user select a protocol in the ProtocolHierarchy the
          selection will be propagated to the hexview with the same behaviour
          of field selection but for the entire protocol. See also wireshark.
    * PM/Gui/Widgets/PropertyGrid.py:
        - Added the possibility to use PyGtkHexView class to edit string fields
          that can't be converted to utf-8 string. This should close all bugs
          related to the missing read/write hexview implementation.

    Fixed various bug and regression.
    80 columns line wrap fixed in various files.

2009-05-16 Francesco Piccinno <stack.box@gmail.com>

    * PacketManipulator:
        - Added --debug option to spawn a gdb session when the launcher is
          started.
    * PM/PacketManipulator:
        - now we require pygtk >= 2.14
    * PM/Gui/Pages/SniffPage.py:
        - 80 columns line wrap fixed.
        - Created two differents treemode to store informations (gtk.ListStore